[package]
name = "fast-threadpool"
version = "0.2.3-alpha.0"
authors = ["librelois <c@elo.tf>"]
edition = "2018"
description = "Thread-pool implementation optimized to minimize latency."
readme = "README.md"
license = "MIT"

[dependencies]
async-oneshot = "0.4.2"
flume = "0.9.1"
num_cpus = "1.13.0"

[dev-dependencies]
futures = "0.3.7"
