[package]
name = "fast-threadpool"
version = "0.3.1-alpha.0"
authors = ["librelois <c@elo.tf>"]
edition = "2018"
description = "Thread-pool implementation optimized to minimize latency."
readme = "README.md"
repository = "https://github.com/librelois/fast-threadpool"
license = "MIT"

[dependencies]
async-oneshot = "0.4.2"
flume = { version = "0.10.0", default-features = false }
num_cpus = "1.13.0"

[dev-dependencies]
futures = "0.3.7"

[features]
default = ["async"]

async = ["flume/async", "flume/eventual-fairness"]
